# cmd/main/docs/swagger.json
@@ -214,11 +214,17 @@
                     "201": {
                         "description": "Бронирование успешно создано",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_booking.CreateBookingResponse"
                         }
                     },
                     "400": {
                         "description": "Неверный запрос",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка сервера",
                         "schema": {
                             "type": "string"
                         }
@@ -956,6 +962,14 @@
                     "type": "string"
                 },
                 "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "internal_api_booking.CreateBookingResponse": {
+            "type": "object",
+            "properties": {
+                "booking_id": {
                     "type": "integer"
                 }
             }
