# internal/grpc/api/booking_api/booking_grpc.pb.go
@@ -1,0 +1,236 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.5.1
+// - protoc             v6.31.1
+// source: booking.proto
+
+package booking_api
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+	emptypb "google.golang.org/protobuf/types/known/emptypb"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	BookingService_CreateBooking_FullMethodName = "/booking_service.BookingService/CreateBooking"
+	BookingService_ExtendBooking_FullMethodName = "/booking_service.BookingService/ExtendBooking"
+	BookingService_CancelBooking_FullMethodName = "/booking_service.BookingService/CancelBooking"
+	BookingService_EndBooking_FullMethodName    = "/booking_service.BookingService/EndBooking"
+)
+
+// BookingServiceClient is the client API for BookingService service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type BookingServiceClient interface {
+	CreateBooking(ctx context.Context, in *CreateBookingRequest, opts ...grpc.CallOption) (*CreateBookingResponse, error)
+	ExtendBooking(ctx context.Context, in *ExtendBookingRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
+	CancelBooking(ctx context.Context, in *CancelBookingRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
+	EndBooking(ctx context.Context, in *EndBookingRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
+}
+
+type bookingServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewBookingServiceClient(cc grpc.ClientConnInterface) BookingServiceClient {
+	return &bookingServiceClient{cc}
+}
+
+func (c *bookingServiceClient) CreateBooking(ctx context.Context, in *CreateBookingRequest, opts ...grpc.CallOption) (*CreateBookingResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(CreateBookingResponse)
+	err := c.cc.Invoke(ctx, BookingService_CreateBooking_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *bookingServiceClient) ExtendBooking(ctx context.Context, in *ExtendBookingRequest, opts ...grpc.CallOption) (*emptypb.Empty, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(emptypb.Empty)
+	err := c.cc.Invoke(ctx, BookingService_ExtendBooking_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *bookingServiceClient) CancelBooking(ctx context.Context, in *CancelBookingRequest, opts ...grpc.CallOption) (*emptypb.Empty, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(emptypb.Empty)
+	err := c.cc.Invoke(ctx, BookingService_CancelBooking_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *bookingServiceClient) EndBooking(ctx context.Context, in *EndBookingRequest, opts ...grpc.CallOption) (*emptypb.Empty, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(emptypb.Empty)
+	err := c.cc.Invoke(ctx, BookingService_EndBooking_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// BookingServiceServer is the server API for BookingService service.
+// All implementations must embed UnimplementedBookingServiceServer
+// for forward compatibility.
+type BookingServiceServer interface {
+	CreateBooking(context.Context, *CreateBookingRequest) (*CreateBookingResponse, error)
+	ExtendBooking(context.Context, *ExtendBookingRequest) (*emptypb.Empty, error)
+	CancelBooking(context.Context, *CancelBookingRequest) (*emptypb.Empty, error)
+	EndBooking(context.Context, *EndBookingRequest) (*emptypb.Empty, error)
+	mustEmbedUnimplementedBookingServiceServer()
+}
+
+// UnimplementedBookingServiceServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedBookingServiceServer struct{}
+
+func (UnimplementedBookingServiceServer) CreateBooking(context.Context, *CreateBookingRequest) (*CreateBookingResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method CreateBooking not implemented")
+}
+func (UnimplementedBookingServiceServer) ExtendBooking(context.Context, *ExtendBookingRequest) (*emptypb.Empty, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ExtendBooking not implemented")
+}
+func (UnimplementedBookingServiceServer) CancelBooking(context.Context, *CancelBookingRequest) (*emptypb.Empty, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method CancelBooking not implemented")
+}
+func (UnimplementedBookingServiceServer) EndBooking(context.Context, *EndBookingRequest) (*emptypb.Empty, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method EndBooking not implemented")
+}
+func (UnimplementedBookingServiceServer) mustEmbedUnimplementedBookingServiceServer() {}
+func (UnimplementedBookingServiceServer) testEmbeddedByValue()                        {}
+
+// UnsafeBookingServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to BookingServiceServer will
+// result in compilation errors.
+type UnsafeBookingServiceServer interface {
+	mustEmbedUnimplementedBookingServiceServer()
+}
+
+func RegisterBookingServiceServer(s grpc.ServiceRegistrar, srv BookingServiceServer) {
+	// If the following call pancis, it indicates UnimplementedBookingServiceServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&BookingService_ServiceDesc, srv)
+}
+
+func _BookingService_CreateBooking_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CreateBookingRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(BookingServiceServer).CreateBooking(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: BookingService_CreateBooking_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(BookingServiceServer).CreateBooking(ctx, req.(*CreateBookingRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _BookingService_ExtendBooking_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ExtendBookingRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(BookingServiceServer).ExtendBooking(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: BookingService_ExtendBooking_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(BookingServiceServer).ExtendBooking(ctx, req.(*ExtendBookingRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _BookingService_CancelBooking_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CancelBookingRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(BookingServiceServer).CancelBooking(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: BookingService_CancelBooking_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(BookingServiceServer).CancelBooking(ctx, req.(*CancelBookingRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _BookingService_EndBooking_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(EndBookingRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(BookingServiceServer).EndBooking(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: BookingService_EndBooking_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(BookingServiceServer).EndBooking(ctx, req.(*EndBookingRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// BookingService_ServiceDesc is the grpc.ServiceDesc for BookingService service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var BookingService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "booking_service.BookingService",
+	HandlerType: (*BookingServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "CreateBooking",
+			Handler:    _BookingService_CreateBooking_Handler,
+		},
+		{
+			MethodName: "ExtendBooking",
+			Handler:    _BookingService_ExtendBooking_Handler,
+		},
+		{
+			MethodName: "CancelBooking",
+			Handler:    _BookingService_CancelBooking_Handler,
+		},
+		{
+			MethodName: "EndBooking",
+			Handler:    _BookingService_EndBooking_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "booking.proto",
+}
